[package]
name = "proxyhunt"
version = "0.1.0"
edition = "2021"
description = "A fast, modern proxy scraper and checker"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks", "trust-dns"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1"
ipnet = "2"
futures = "0.3"
maxminddb = "0.24"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
url = "2"
async-trait = "0.1"
lazy_static = "1.4"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
